--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:443323527070:ios:b772f6a5999089af4c708f",
-  "FIREBASE_PROJECT_ID": "cmsc23authtest",
-  "GCM_SENDER_ID": "443323527070"
+  "GOOGLE_APP_ID": "1:580684733548:ios:cd2547e2920b2897700c49",
+  "FIREBASE_PROJECT_ID": "cmsc23-ljalabay",
+  "GCM_SENDER_ID": "580684733548"
 }
